# erebor-runtime

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml
crates/erebor-runtime-audit/: Cargo.toml
crates/erebor-runtime-audit/src/: error.rs  evidence_trace.rs  filter.rs  jsonl.rs  lib.rs  session_review.rs  tests.rs
crates/erebor-runtime-audit/src/error/: audit_log.rs  evidence_trace.rs  session_review.rs
crates/erebor-runtime-audit/src/evidence_trace/: artifacts.rs  redaction.rs  render.rs  report.rs  request.rs  sink.rs  source.rs  test_support.rs
crates/erebor-runtime-audit/src/filter/: matcher.rs  surfaces.rs  tests.rs
crates/erebor-runtime-audit/src/session_review/: artifacts.rs  decisions.rs  record.rs  render.rs  source.rs  summary.rs  test_support.rs  timeline.rs
crates/erebor-runtime-cdp/: Cargo.toml
crates/erebor-runtime-cdp/src/: browser.rs  error.rs  lib.rs  message.rs  method.rs  protocol.rs  proxy.rs  runtime.rs  server.rs  state.rs  target_graph.rs
crates/erebor-runtime-cdp/src/browser/: devtools.rs  diagnostics.rs  executable.rs  http_json.rs  launch.rs  page_target.rs  process.rs  profile.rs
crates/erebor-runtime-cdp/src/message/: command.rs  context.rs  decision.rs  event.rs  observer.rs  outcome.rs  tests.rs
crates/erebor-runtime-cdp/src/protocol/: command.rs  command_decoder.rs  event.rs  event_decoder.rs  target_decoder.rs  target_management.rs  target_reference.rs  tests.rs  wire.rs
crates/erebor-runtime-cdp/src/server/: audit.rs  browser_observer.rs  client_text.rs  connection.rs  fetch.rs  http_discovery.rs  observer_wire.rs  page_observer.rs
crates/erebor-runtime-cdp/src/state/: data.rs  page.rs  projection.rs  tests.rs
crates/erebor-runtime-cdp/src/target_graph/: graph.rs  ids.rs  sessions.rs  target.rs  tests.rs
crates/erebor-runtime-cdp/tests/: browser_cdp_lifecycle.rs  proxy_e2e.rs  runtime_e2e.rs
crates/erebor-runtime-cdp/tests/runtime_e2e/: mini_upstream.rs  owned_browser.rs  real_chrome.rs  session.rs
crates/erebor-runtime-cdp/tests/support/: browser_client.rs  chrome.rs  chrome_http.rs  common.rs  discovery.rs  error_helpers.rs  mini.rs  mod.rs  policy.rs  proxy.rs  runtime.rs  runtime_config.rs
crates/erebor-runtime-cli/: Cargo.toml
crates/erebor-runtime-cli/src/: cli.rs  daemon_cli.rs  error.rs  lib.rs  logging.rs  main.rs
crates/erebor-runtime-cli/src/cli/: agent.rs  approval.rs  audit.rs  config_paths.rs  daemon.rs  dev.rs  filesystem.rs  parsers.rs  policy.rs  runner.rs  session.rs  start.rs  test_support.rs  tests.rs
crates/erebor-runtime-cli/tests/: session_review_e2e.rs
crates/erebor-runtime-client/: Cargo.toml
crates/erebor-runtime-client/src/: agent.rs  approvals.rs  error.rs  lib.rs  policy.rs  runner.rs  session.rs
crates/erebor-runtime-context/: Cargo.toml
crates/erebor-runtime-context/src/: error.rs  lib.rs  repository.rs  write_boundary.rs
crates/erebor-runtime-context/src/repository/: inspect.rs  object.rs  pin.rs  refs.rs  transaction.rs  tree_edit.rs
crates/erebor-runtime-core/: Cargo.toml
crates/erebor-runtime-core/src/: config.rs  engine.rs  error.rs  interception.rs  lib.rs  runtime.rs  session.rs  session_registry.rs  tests.rs
crates/erebor-runtime-core/src/config/: audit.rs  filesystem_surface.rs  runner.rs  runtime.rs  session.rs  surfaces.rs  test_prelude.rs
crates/erebor-runtime-daemon/: Cargo.toml
crates/erebor-runtime-daemon/src/: approvals.rs  config.rs  context_dag.rs  control.rs  error.rs  idempotency.rs  lib.rs  local_store.rs  log.rs  path_broker.rs  paths.rs  session_api.rs  session_control.rs  tests.rs
crates/erebor-runtime-e2e/: Cargo.toml  README.md
crates/erebor-runtime-e2e/src/: error.rs  lib.rs  system.rs  websocket.rs
crates/erebor-runtime-e2e/tests/: browser_cdp_mediation_lifecycle.rs  cli_command_owners.rs  codex_linux_v1_lifecycle.rs  codex_linux_v1_session_run.rs  codex_v1_fixture.rs  context_repository_decision_pin.rs  context_repository_recovery.rs  context_session_ownership.rs  daemon_control_plane.rs  privileged_daemon_control_plane.rs  session_review.rs
crates/erebor-runtime-filesystem/: Cargo.toml
crates/erebor-runtime-filesystem/src/: checkpoint.rs  config.rs  error.rs  lib.rs  linux_overlay_session.rs  linux_read_only_session.rs  manifest.rs  metadata.rs  normalizer.rs  ostree.rs  overlay.rs  promotion.rs  session_work.rs  storage.rs
crates/erebor-runtime-ipc/: Cargo.toml  build.rs
crates/erebor-runtime-ipc/src/: codec.rs  error.rs  frame.rs  lib.rs  v1.rs
crates/erebor-runtime-ipc/tests/: contract.rs
crates/erebor-runtime-packages/: Cargo.toml
crates/erebor-runtime-packages/src/: codex.rs  error.rs  lib.rs  model.rs  notation.rs
crates/erebor-runtime-policy/: Cargo.toml
crates/erebor-runtime-policy/src/: decision.rs  error.rs  layered.rs  lib.rs  policy.rs  tests.rs
crates/erebor-runtime-reporting/: Cargo.toml
crates/erebor-runtime-reporting/src/: lib.rs
crates/erebor-runtime-session/: Cargo.toml  build.rs
crates/erebor-runtime-session/src/: adoption.rs  child_admission.rs  child_delivery.rs  control_broker.rs  controller_support.rs  diagnostic.rs  docker_controller.rs  docker_process_guard.c  error.rs  interception_backend.rs  interception_setup.rs  lib.rs  linux_controller.rs  policies.rs  registry_lifecycle.rs  runners.rs  runtime_interception_broker.rs  session_context.rs  session_helper.rs  session_manager.rs  session_output.rs  session_repository.rs  session_resources.rs  session_run.rs  session_side_resources.rs  session_supervisor.rs  surface_services.rs  surfaces.rs  terminal_process_exec.rs  tests.rs
crates/erebor-runtime-session/tests/: filesystem_surface_config.rs  filesystem_surface_lifecycle.rs  linux_host_runner.rs  linux_process_guard.rs  linux_process_guard_broker.rs  linux_process_mediator.rs
crates/erebor-runtime-telemetry/: Cargo.toml
crates/erebor-runtime-telemetry/src/: lib.rs  logging.rs  macros.rs
crates/erebor-runtime-terminal/: Cargo.toml
crates/erebor-runtime-terminal/src/: env.rs  error.rs  guard_rules.rs  lib.rs  mediation.rs  policy.rs  tests.rs
(+580 files in other folders)
