[workspace]
members = [
    "crates/erebor-runtime-audit",
    "crates/erebor-runtime-cdp",
    "crates/erebor-runtime-cli",
    "crates/erebor-runtime-core",
    "crates/erebor-runtime-events",
    "crates/erebor-runtime-policy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Ereborlabs/erebor-runtime"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.26"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
