[workspace]
members = [
    "crates/erebor-runtime-audit",
    "crates/erebor-runtime-cdp",
    "crates/erebor-runtime-client",
    "crates/erebor-runtime-cli",
    "crates/erebor-runtime-core",
    "crates/erebor-runtime-context",
    "crates/erebor-runtime-daemon",
    "crates/erebor-runtime-e2e",
    "crates/erebor-runtime-error",
    "crates/erebor-runtime-telemetry",
    "crates/erebor-runtime-events",
    "crates/erebor-runtime-filesystem",
    "crates/erebor-runtime-ipc",
    "crates/erebor-runtime-policy",
    "crates/erebor-runtime-session",
    "crates/erebor-runtime-terminal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Ereborlabs/erebor-runtime"

[workspace.dependencies]
cdp-protocol = "0.3.1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7.2.1"
futures-util = "0.3"
gix = { git = "https://github.com/nhaghighat/gitoxide", rev = "f803d3ea2efd54f18cafea76129e4c07e3e2eab9", default-features = false, features = ["parallel", "sha1", "sha256", "tree-editor"] }
prost = "0.13"
prost-build = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
