[package]
name = "erebor-runtime-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comfy-table.workspace = true
erebor-runtime-context = { path = "../erebor-runtime-context" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true

[lints]
workspace = true
