[package]
name = "erebor-runtime-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true
