[package]
name = "erebor-runtime-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
futures-util.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
snafu.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
