[package]
name = "erebor-runtime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-cdp = { path = "../erebor-runtime-cdp" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "erebor-runtime"
path = "src/main.rs"

[lints]
workspace = true
