[package]
name = "erebor-runtime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-cdp = { path = "../erebor-runtime-cdp" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-session = { path = "../erebor-runtime-session" }
serde_json.workspace = true
snafu.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
erebor-runtime-e2e = { path = "../erebor-runtime-e2e" }

[[bin]]
name = "erebor-runtime"
path = "src/main.rs"

[lints]
workspace = true
