[package]
name = "erebor-runtime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
comfy-table.workspace = true
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-cdp = { path = "../erebor-runtime-cdp" }
erebor-runtime-client = { path = "../erebor-runtime-client" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-filesystem = { path = "../erebor-runtime-filesystem" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-session = { path = "../erebor-runtime-session" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[[bin]]
name = "erebor-runtime"
path = "src/main.rs"

[[bin]]
name = "erebor"
path = "src/bin/erebor.rs"

[lints]
workspace = true
