[package]
name = "erebor-runtime-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
prost.workspace = true
snafu.workspace = true
tokio.workspace = true

[lints]
workspace = true
