[package]
name = "erebor-runtime-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
gix.workspace = true
serde.workspace = true
snafu.workspace = true

[features]
test-support = []

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23.0"

[lints]
workspace = true
