[package]
name = "erebor-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-filesystem = { path = "../erebor-runtime-filesystem" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
