[package]
name = "erebor-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-context = { path = "../erebor-runtime-context" }
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-filesystem = { path = "../erebor-runtime-filesystem" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
rustix = { version = "1.1.4", features = ["process"] }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23.0"

[lints]
workspace = true
