[package]
name = "erebor-runtime-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
rustix = { version = "1.1.4", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "erebord"
path = "src/bin/erebord.rs"

[lints]
workspace = true
