[package]
name = "erebor-runtime-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-approvals = { path = "../erebor-runtime-approvals" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
erebor-runtime-packages = { path = "../erebor-runtime-packages" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-session = { path = "../erebor-runtime-session" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rustix = { version = "1.1.4", features = ["fs", "process", "net", "thread", "mount"] }

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "erebord"
path = "src/bin/erebord.rs"

[[bin]]
name = "erebor-path-broker"
path = "src/bin/erebor_path_broker.rs"

[lints]
workspace = true
