[package]
name = "erebor-runtime-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
futures-util.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-context = { path = "../erebor-runtime-context", features = ["test-support"] }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
tempfile = "3.23.0"

[lints]
workspace = true
