[package]
name = "erebor-runtime-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap.workspace = true
erebor-runtime-client = { path = "../erebor-runtime-client" }
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
erebor-runtime-session = { path = "../erebor-runtime-session" }
futures-util.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
rustix = { version = "1.1.4", features = ["fs", "process", "stdio"] }

[dev-dependencies]
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-context = { path = "../erebor-runtime-context", features = ["test-support"] }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
sha2.workspace = true
tempfile = "3.23.0"

[[bin]]
name = "codex-linux-v1-test-hook"
path = "src/bin/codex_linux_v1_test_hook.rs"
test = false
bench = false

[[bin]]
name = "codex-linux-v1-session-driver"
path = "src/bin/codex_linux_v1_session_driver.rs"
test = false
bench = false

[[bin]]
name = "erebor-daemon-session-driver"
path = "src/bin/erebor_daemon_session_driver.rs"
test = false
bench = false


[lints]
workspace = true
