[package]
name = "erebor-runtime-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
ostree = { version = "0.20", features = ["v2016_8"] }
rustix = { version = "1.1.4", features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true

[lints]
workspace = true
