[package]
name = "erebor-runtime-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
prost.workspace = true
snafu.workspace = true

[build-dependencies]
prost-build.workspace = true

[lints]
workspace = true
