[package]
name = "erebor-runtime-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-events = { path = "../erebor-runtime-events" }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
thiserror.workspace = true

[lints]
workspace = true
