[package]
name = "erebor-runtime-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
serde_json.workspace = true
snafu.workspace = true
thiserror.workspace = true

[lints]
workspace = true
