[package]
name = "erebor-runtime-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-cdp = { path = "../erebor-runtime-cdp" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-terminal = { path = "../erebor-runtime-terminal" }
snafu.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
# Expose the standalone process guard to rust-analyzer without changing the
# build-script-produced runtime artifact.
editor-process-guard-target = []

[[bin]]
name = "erebor-linux-process-guard"
path = "src/os/linux/process_guard.rs"
required-features = ["editor-process-guard-target"]
test = false
bench = false

[lints]
workspace = true
