[package]
name = "erebor-runtime-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-audit = { path = "../erebor-runtime-audit" }
erebor-runtime-cdp = { path = "../erebor-runtime-cdp" }
erebor-runtime-context = { path = "../erebor-runtime-context" }
erebor-runtime-core = { path = "../erebor-runtime-core" }
erebor-runtime-error = { path = "../erebor-runtime-error" }
erebor-runtime-events = { path = "../erebor-runtime-events" }
erebor-runtime-filesystem = { path = "../erebor-runtime-filesystem" }
erebor-runtime-ipc = { path = "../erebor-runtime-ipc" }
erebor-runtime-policy = { path = "../erebor-runtime-policy" }
erebor-runtime-terminal = { path = "../erebor-runtime-terminal" }
erebor-runtime-telemetry = { path = "../erebor-runtime-telemetry" }
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
tokio.workspace = true
rustix = { version = "1.1.4", features = ["event", "fs", "net", "process"] }

[features]
# Expose the standalone process guard to rust-analyzer without changing the
# build-script-produced runtime artifact.
editor-process-guard-target = []

[dev-dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[[bin]]
name = "erebor-linux-process-guard"
path = "src/os/linux/process_guard.rs"
required-features = ["editor-process-guard-target"]
test = false
bench = false

[[bin]]
name = "erebor-codex-hook"
path = "src/agents/codex/managed_hook.rs"

[lints]
workspace = true
