[package]
name = "erebor-runtime-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
erebor-runtime-error = { path = "../erebor-runtime-error" }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
